--- a/Projeto-Treinamento/package.json
+++ b/Projeto-Treinamento/package.json
@@ -7,14 +7,16 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
+        "@tailwindcss/vite": "^4.1.12",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
+        "tailwindcss": "^4.1.12",
         "vite": "^7.0.4"
     },
     "dependencies": {
+        "@inertiajs/vue3": "^2.1.2",
+        "@vitejs/plugin-vue": "^6.0.1",
         "vuetify": "^3.9.5"
     }
 }
